syntax = "proto3";

package testgrpc;

option go_package = "github.com/namnv/mockTool/example/gprc/proto;testgrpc";

import "google/api/annotations.proto";

message TestRequest {
  int64 id = 1;
  string name = 2;
}

message TestResponse {
  int64 id = 1;
  string name = 2;
}

message AnotherServiceFuncRequest {}

message AnotherServiceFuncResponse {}

service TestService {
  rpc TestAPI(TestRequest) returns (TestResponse) {
    option (google.api.http) = {
      get: "/api/v1/test"
    };
  }

  rpc AnotherServiceFunc(AnotherServiceFuncRequest) returns (AnotherServiceFuncResponse) {
    option (google.api.http) = {
      get: "/api/v1/another"
    };
  }
}
