syntax = "proto3";

package error;

option go_package = "github.com/namnv/mockTool/pkg/errorcustome";

message ErrorDetail {
  string error_code = 1;
  map<string, string> metadata = 2;
}


// run "buf generate" first